# Book-Website

./: .replit  README.md  app.py  models.py  pyproject.toml  tempCodeRunnerFile.py
Scripts/: home.js  products.js
instance/: db.sqlite3
static/: admin.html  contact_us.html  login.css  login.html  my_cart.html  sytles.css
templates/: add_book.html  edit_book.html  footer.html  header.html  home.html  index.html  layout.html  login.html
